Implement connection to Database

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=127.0.0.1;Port=3306;Database=vazar_db;Uid=root;Pwd=your_root_password;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
